# ITK-projects

./: CMakeLists.txt  README.md
FilterGradientMagnitude/: CMakeLists.txt  filderGradientMagnitude.cpp
HelloWorld/: CMakeLists.txt  hello.cpp  main.cpp
